feat: edit group members and name