@@ -3,11 +3,14 @@ package de.uniks.stpmon.k.service;
 import de.uniks.stpmon.k.dto.CreateGroupDto;
 import de.uniks.stpmon.k.dto.Group;
 import de.uniks.stpmon.k.dto.UpdateGroupDto;
+import de.uniks.stpmon.k.dto.User;
 import de.uniks.stpmon.k.rest.GroupApiService;
 import io.reactivex.rxjava3.core.Observable;
 
 import javax.inject.Inject;
 import java.util.ArrayList;
+import java.util.Collection;
+import java.util.HashSet;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -60,34 +63,10 @@ public class GroupService {
     /**
      * updates a group either by changing the name or updating the member list or both.
      */
-    public Observable<Group> updateGroupName(Group group, String name) {
+    public Observable<Group> updateGroup(Group group, String name, Collection<String> members) {
         return groupApiService.editGroup(
             group._id(),
-            new UpdateGroupDto(name, group.members())
-        );
-    }
-
-    public Observable<Group> addMembers(Group group, List<String> newMembers) {
-        List<String> updatedMembers = group.members();
-        updatedMembers.addAll(newMembers);
-        return updateMembers(group, updatedMembers);
-    }
-
-    public Observable<Group> removeMembers(Group group, List<String> membersToBeRemoved) {
-        List<String> updatedMembers = group.members();
-        updatedMembers.removeAll(membersToBeRemoved);
-        return updateMembers(group, updatedMembers);
-    }
-
-    // boiler plate function for add- and removeMembers
-    public Observable<Group> updateMembers(Group group, List<String> members) {
-        // prevents any duplicate members in the array list
-        // distinct() filters out any duplicates,
-        // collect() recollects these distinct elements
-        members = new ArrayList<>(members.stream().distinct().collect(Collectors.toList()));
-        return groupApiService.editGroup(
-            group._id(),
-            new UpdateGroupDto(group.name(), members)
+            new UpdateGroupDto(name, members.stream().distinct().toList())
         );
     }
 
